fix: imagens com a url quebrada

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -15,7 +15,7 @@
       <div class="cabecalho__links">
         <div class="cabecalho__links-icones">
           <img
-            src="./assets/_Icon_.svg"
+            src="./assets/icone-hamburguer.svg"
             alt="ícone menu hamburguer"
             class="cabecalho__links-hamburguer"
             id="menu-hamburguer"
@@ -54,7 +54,7 @@
           alt="foto de perfil mulher com óculos e cabelos escuros"
           class="cabecalho__imagens__perfil"
         />
-        <img src="./assets/_IconButton_.svg" alt="ícone de sino" />
+        <img src="./assets/icone-sino.svg" alt="ícone de sino" />
       </div>
     </header>
 
