fix: icone sair menu responsivo tela descobrir

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -46,7 +46,7 @@
             </div>
             <a href="#">
                 <div class="sair" id="logout">
-                    <img src="assets/_Icon_sair.png" alt=""><p style="color: black;">Sair</p>
+                    <img src="assets/iconeSair.png" alt=""><p style="color: black;">Sair</p>
                 </div>
             </a>
         </div>
